# METIS

./: .gitignore  .gitmodules  CMakeLists.txt
include/: metis.h.in
libmetis/: CMakeLists.txt
